--- a/T2009M/T2009M.csproj
+++ b/T2009M/T2009M.csproj
@@ -47,7 +47,8 @@
     <Compile Include="lap2\Fashion.cs" />
     <Compile Include="lap1\Product.cs" />
     <Compile Include="lap3\Cart.cs" />
-    <Compile Include="lap3\Program.cs" />
+    <Compile Include="lap4\Program.cs" />
+    <Compile Include="lap4\CalcInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
